<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ CloudSim Express
  ~ Copyright (C) 2022  CloudsLab
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>cloudsim-express</artifactId>
        <groupId>org.cloudbus.cloudsim.cloudsim-express</groupId>
        <version>0.1-SNAPSHOT</version>
    </parent>

    <artifactId>cloudsim-express-core</artifactId>
    <name>CloudSim Express: Core</name>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>${project.basedir}/src/main/resources/simulation-elements.yaml</inputSpec>
                            <generatorName>spring</generatorName>
                            <configOptions>
                                <!--                <sourceFolder>${project.basedir}/src/gen/java/main</sourceFolder>-->
                                <delegatePattern>true</delegatePattern>
                            </configOptions>
                            <apiPackage>
                                org.cloudbus.cloudsim.express.service
                            </apiPackage>
                            <modelPackage>
                                org.cloudbus.cloudsim.express.resolver.environment.definitions.model
                            </modelPackage>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <output>${project.basedir}/src/main/gen</output>
                            <addCompileSourceRoot>true</addCompileSourceRoot>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/main/gen/src/main/java</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <groupId>org.apache.maven.plugins</groupId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <configuration>
                            <finalName>simulator</finalName>
                            <archive>
                                <manifest>
                                    <mainClass>
                                        org.cloudbus.cloudsim.express.service.CloudSimExpressCLI
                                    </mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <excludePackageNames>
                        org.cloudbus.cloudsim.cloudsim_express.*:org.cloudbus.cloudsim.express.resolver.environment.definitions.model
                    </excludePackageNames>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.7.2.1</version>
                <configuration>
                    <excludeFilterFile>spot-bugs-excludes.xml</excludeFilterFile>
                    <!--                    <includeFilterFile>spotbugs-include.xml</includeFilterFile>-->
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.7.2.1</version>
                <configuration>
                    <excludeFilterFile>spot-bugs-excludes.xml</excludeFilterFile>
                    <!--                    <includeFilterFile>spotbugs-include.xml</includeFilterFile>-->
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <dependencies>
        <dependency>
            <artifactId>cloudsim-toolkit</artifactId>
            <groupId>org.cloudbus.cloudsim</groupId>
        </dependency>
        <dependency>
            <artifactId>cloudsim-examples</artifactId>
            <groupId>org.cloudbus.cloudsim</groupId>
        </dependency>
        <dependency>
            <artifactId>commons-csv</artifactId>
            <groupId>org.apache.commons</groupId>
        </dependency>
        <dependency>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
        </dependency>
        <dependency>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <groupId>com.fasterxml.jackson.datatype</groupId>
        </dependency>
        <dependency>
            <artifactId>jackson-databind</artifactId>
            <groupId>com.fasterxml.jackson.core</groupId>
        </dependency>
        <dependency>
            <artifactId>junit-jupiter</artifactId>
            <groupId>org.junit.jupiter</groupId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>cloudsim-express-extensions</artifactId>
            <groupId>org.cloudbus.cloudsim.cloudsim-express</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-web</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-data-jpa</artifactId>
            <groupId>org.springframework.data</groupId>
        </dependency>
        <dependency>
            <artifactId>jackson-databind-nullable</artifactId>
            <groupId>org.openapitools</groupId>
        </dependency>
        <dependency>
            <artifactId>swagger-annotations</artifactId>
            <groupId>io.swagger.core.v3</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-validation</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>swagger-parser-v3</artifactId>
            <groupId>io.swagger.parser.v3</groupId>
        </dependency>
        <dependency>
            <artifactId>reflections</artifactId>
            <groupId>org.reflections</groupId>
        </dependency>
    </dependencies>
</project>
